@@ -61,3 +61,6 @@ Note that the following bug and feature requests are logged in GForge with relat
  - added to test setup script to create anonymous in the target server
  [#635] add jargon module for http streaming, pull out of jargon core
  - new jargon-httpstream service module for streaming data from a url into iRODS (uses Apache HTTPClient libraries)
+ [#638] optimization pass
+ -general profiling
+ -improvement of parallel transfer
